# ai-battler

./: .env.example  .gitignore  Dockerfile  README.md  lambda_handler.py  pyproject.toml  serverless.yml
ai_battler/: errors.py  logger.py
ai_battler/ai/: arena.py  base.py  haiku.py  summary.py
ai_battler/chat/: chatbot.py  mastodon_api.py  utils.py
tests/chat/: test_chatbot.py
